--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,5 @@ serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.117"
 
 zip = "2.1.3"
+rust_search = "2.0.0"
+regex = "1.10.5"
